tests/spec/emit/snapshots/select_match_receive.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn process(v: int) {}
  fn handle_close() {}
  
  fn test() {
    let ch = Channel.new<int>();
    select {
      match ch.receive() {
        Some(v) => process(v),
        None => handle_close(),
      },
      _ => {},
    }
  }
---
package main

func process(_ int) {}

func handleClose() {}

func test() {
	ch := make(chan int)
	select {
	case v, ok := <-ch:
		if ok {
			process(v)
		} else {
			handleClose()
		}
	default:
	}
}
