tests/spec/emit/snapshots/select_match_receive_before_shorthand_eval_order.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn choose(tag: int, ch: Channel<int>) -> Channel<int> {
    ch
  }
  
  fn main() {
    let ch1 = Channel.buffered<int>(1)
    let ch2 = Channel.buffered<int>(1)
    ch1.send(10)
    ch2.send(20)
  
    let _ = select {
      match choose(1, ch1).receive() {
        Some(v) => v,
        None => -1,
      },
      let Some(v) = choose(2, ch2).receive() => v,
      _ => -2,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func choose(_ int, ch chan int) chan int {
	return ch
}

func main() {
	ch1 := make(chan int, 1)
	ch2 := make(chan int, 1)
	lisette.ChannelSend(ch1, 10)
	lisette.ChannelSend(ch2, 20)
	var tmp_1 int
	ch_2 := choose(1, ch1)
	ch_3 := choose(2, ch2)
	for {
		select {
		case v, ok := <-ch_2:
			if ok {
				tmp_1 = v
			} else {
				tmp_1 = -1
			}
		case v, ok := <-ch_3:
			if ok {
				tmp_1 = v
			} else {
				ch_3 = nil
				continue
			}
		default:
			tmp_1 = -2
		}
		break
	}
	_ = tmp_1
}
