tests/spec/emit/snapshots/select_match_receive_binding_no_leak.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let x = 1
    fmt.Println(x)
    let x = 2
    let ch = Channel.new<int>()
    task { ch.send(1) }
  
    select {
      match ch.receive() {
        Some(x) => {
          fmt.Println(x)
          0
        },
        None => 0,
      },
      _ => {
        fmt.Println(x)
        0
      },
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	x := 1
	fmt.Println(x)
	x_1 := 2
	ch := make(chan int)
	go func() {
		lisette.ChannelSend(ch, 1)
	}()
	select {
	case recv_2, ok := <-ch:
		if ok {
			fmt.Println(recv_2)
		}
	default:
		fmt.Println(x_1)
	}
}
