tests/spec/emit/snapshots/select_match_receive_complex_unused_recv.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  struct P { v: int }
  fn test() {
    let ch = Channel.buffered<P>(1)
    ch.send(P { v: 1 })
    select {
      match ch.receive() {
        Some(P { v }) => (),
        None => (),
      },
      _ => (),
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type P struct {
	v int
}

func test() {
	ch := make(chan P, 1)
	lisette.ChannelSend(ch, P{v: 1})
	select {
	case recv_1, ok := <-ch:
		_ = ok
		_ = recv_1
	default:
	}
}
