tests/spec/emit/snapshots/select_match_receive_none_branch_shadow.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> int {
    let x = 111
    let ch = Channel.new<int>()
    ch.close()
    let out = select {
      match ch.receive() {
        Some(x) => x,
        None => x,
      },
      _ => 0,
    }
    let _ = x
    out
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	x := 111
	ch := make(chan int)
	lisette.ChannelClose(ch)
	var out int
	select {
	case recv, ok := <-ch:
		if ok {
			out = recv
		} else {
			out = x
		}
	default:
		out = 0
	}
	_ = x
	return out
}
