tests/spec/emit/snapshots/select_match_receive_on_go_interface_uses_comma_ok.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn drain(ch: Receiver<shapes.Shape>) -> int {
    select {
      match ch.receive() {
        Some(shapes.Rect { W: w, H: h }) => w * h,
        None => -1,
      },
    }
  }
---
package main

import "example.com/shapes"

func drain(ch <-chan shapes.Shape) int {
	select {
	case recv, ok := <-ch:
		if ok {
			asserted, ok := recv.(shapes.Rect)
			if ok {
				return asserted.W * asserted.H
			}
			return -1
		}
		return -1
	}
}
