tests/spec/emit/snapshots/select_match_receive_propagate_channel_call.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn g() -> Result<Channel<int>, string> { Ok(Channel.buffered<int>(1)) }
  
  fn f() -> Result<int, string> {
    let ch = Channel.buffered<int>(1)
    ch.send(7)
    let x = select {
      match g()?.receive() {
        Some(v) => v,
        None => 0,
      },
      _ => 0,
    }
    Ok(x)
  }
  
  fn main() { let _ = f() }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func g() lisette.Result[chan int, string] {
	return lisette.MakeResultOk[chan int, string](make(chan int, 1))
}

func f() lisette.Result[int, string] {
	ch := make(chan int, 1)
	lisette.ChannelSend(ch, 7)
	var x int
	check := g()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[int, string](check.ErrVal)
	}
	select {
	case v, ok := <-check.OkVal:
		if ok {
			x = v
		} else {
			x = 0
		}
	default:
		x = 0
	}
	return lisette.MakeResultOk[int, string](x)
}

func main() {
	f()
}
