tests/spec/emit/snapshots/select_match_receive_ref_call_channel_operand.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_channel(ch: Ref<Channel<int>>) -> Ref<Channel<int>> {
    ch
  }
  
  fn test(ch: Ref<Channel<int>>) {
    select {
      match get_channel(ch).receive() {
        Some(v) => { let _ = v },
        None => {},
      },
      _ => {},
    }
  }
---
package main

func getChannel(ch *chan int) *chan int {
	return ch
}

func test(ch *chan int) {
	select {
	case v, ok := <-*getChannel(ch):
		if ok {
			_ = v
		}
	default:
	}
}
