tests/spec/emit/snapshots/select_match_receive_unused_binding.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let ch = Channel.new<int>()
    select {
      match ch.receive() {
        Some(_) => { let _ = 0; },
        None => { let _ = 1; },
      }
    }
  }
---
package main

func main() {
	ch := make(chan int)
	select {
	case _, ok := <-ch:
		_ = ok
	}
}
