tests/spec/emit/snapshots/select_match_receive_wildcard_some.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn process_close() {}
  
  fn test() {
    let ch = Channel.new<int>();
    select {
      match ch.receive() {
        Some(_) => {},
        None => process_close(),
      },
      _ => {},
    }
  }
---
package main

func processClose() {}

func test() {
	ch := make(chan int)
	select {
	case _, ok := <-ch:
		if !ok {
			processClose()
		}
	default:
	}
}
